--- a/res/values/projekt_strings.xml
+++ b/res/values/projekt_strings.xml
@@ -28,5 +28,25 @@
    <!-- Force authorize substratum packages -->
    <string name="force_authorize_substratum_packages_title">Force authorize every theme app</string>
    <string name="force_authorize_substratum_packages_summary">Allow theme apps from unknown sources</string>
-
+    <!-- Color engine -->
+    <string name="theme_switch_palette">Switch between primary and accent colors</string>
+    <string name="theme_title">Color engine</string>
+    <string name="theme_summary">Select different colors for your current theme</string>
+    <string name="theme_accent_color">Accent color</string>
+    <string name="theme_primary_color">Primary/background color</string>
+    <string name="theme">Theme</string>
+    <string name="oms_enabled">Theme modes unavailable because a Substratum theme overlay is currently installed.Please UNINSTALL theme overlay (not disable).</string>
+    <string name="red">Red</string>
+    <string name="orange">Amber</string>
+    <string name="blue">Teal</string>
+    <string name="green">Green</string>
+    <string name="yellow">Yellow</string>
+    <string name="purple">Purple</string>
+    <string name="pink">Pink</string>
+    <string name="dark">Dark</string>
+    <string name="pixel">Pixel</string>
+    <string name="teal">Default</string>
+    <string name="cyan">Cyan</string>
+    <string name="grey">Grey</string>
+    <string name="default_string">Default</string> 
 </resources>
